RESOLVED FIXED275085
[JSC] Add Concurrent Sweeping Locking
https://bugs.webkit.org/show_bug.cgi?id=275085
Summary [JSC] Add Concurrent Sweeping Locking
Keith Miller
Reported 2024-06-03 17:46:52 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-03 17:49:04 PDT
Keith Miller
Comment 2 2024-06-03 18:53:23 PDT
EWS
Comment 3 2024-06-05 06:55:40 PDT
Committed 279738@main (8c39a7f2d80c): <https://commits.webkit.org/279738@main> Reviewed commits have been landed. Closing PR #29484 and removing active labels.
Fujii Hironori
Comment 4 2024-06-05 13:08:30 PDT
Regressed: Bug 275179 – REGRESSION(279738@main): ASSERTION FAILED: heap.vm().currentThreadIsHoldingAPILock() || heap.worldIsStopped()
WebKit Commit Bot
Comment 5 2024-06-05 21:49:47 PDT
Re-opened since this is blocked by bug 275193
Fujii Hironori
Comment 6 2024-06-06 13:05:48 PDT
There was another assertion failure for inspector/memory/tracking.html. I hope it will be resolved before relanding. https://results.webkit.org/?suite=layout-tests&test=inspector%2Fmemory%2Ftracking.html&style=debug
Keith Miller
Comment 7 2024-06-07 17:34:50 PDT
EWS
Comment 8 2024-06-09 09:28:40 PDT
Committed 279861@main (58b937859832): <https://commits.webkit.org/279861@main> Reviewed commits have been landed. Closing PR #29650 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.